<resources>
    <string name="app_name">BetFam</string>

    <string name="web_client_id">421668747036-o9nq02d5gu82b1pmg5qgfanl304qj85p.apps.googleusercontent.com</string>





    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard_header">My Dashboard</string>

    <string-array name="usertype">
        <item>Farmer/Owner</item>
        <item>Farm Manager</item>
    </string-array>

    <string-array name="kenyan_counties">
        <item>Nairobi</item>
        <item>Mombasa</item>
        <item>Kisumu</item>
        <item>Nakuru</item>
        <item>Eldoret</item>
        <item>Thika</item>
        <item>Machakos</item>
        <item>Kisii</item>
        <item>Kitale</item>
        <item>Malindi</item>
        <item>Garissa</item>
        <item>Kakamega</item>
        <item>Nyeri</item>
        <item>Meru</item>
        <item>Kisii</item>
        <item>Bungoma</item>
        <item>Busia</item>
        <item>Kericho</item>
        <item>Lamu</item>
        <item>Embu</item>
        <item>Migori</item>
        <item>Vihiga</item>
        <item>Homa Bay</item>
        <item>Isiolo</item>
        <item>Nyamira</item>
        <item>Laikipia</item>
        <item>Marsabit</item>
        <item>Elgeyo-Marakwet</item>
        <item>Taita-Taveta</item>
        <item>Wajir</item>
        <item>Siaya</item>
        <item>Trans Nzoia</item>
        <item>West Pokot</item>
        <item>Uasin Gishu</item>
        <item>Kajiado</item>
        <item>Kilifi</item>
        <item>Isiolo</item>
        <item>Nandi</item>
        <item>Kirinyaga</item>
        <item>Turkana</item>
        <item>Samburu</item>
        <item>Tana River</item>
        <item>Tharaka-Nithi</item>
        <item>Mandera</item>
        <item>Bomet</item>
        <item>Narok</item>
    </string-array>

    <array name="kenyan_tea_companies">
        <item>Kericho Tea Holdings</item>
        <item>James Finlay Kenya</item>
        <item>Kapchorua Tea Company</item>
        <item>Williamson Tea Kenya</item>
        <item>Sotik Tea Companies</item>
        <item>Eastern Produce Kenya</item>
        <item>Kambaa Tea Factory</item>
        <item>Githambo Tea Factory</item>
        <item>Sasini Tea and Coffee</item>
        <item>Tanganda Tea Company Kenya</item>
        <item>George Williamson Tea Kenya</item>
        <item>Majani Insurance Brokers</item>
    </array>

    <array name="employee_names">
        <item>John Doe</item>
        <item>Jane Smith</item>
        <item>Michael Johnson</item>
        <item>Emily Davis</item>
        <item>Robert Williams</item>
    </array>


    <string name="menu_home">Home</string>
    <string name="menu_records">Records</string>
    <string name="menu_employees">My Employees</string>
    <string name="menu_managers"> My Managers</string>
    <string name="menu_companies">My Companies</string>
    <string name="menu_payment_types">Payment Types</string>
    <string name="menu_charts">Charts</string>
    <string name="menu_schedule">Shedule</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <item name="editButtonId" type="id" />

</resources>