<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.apptea.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >

        <!-- Define actions to navigate to ScheduleFragment and ChartsFragment -->
        <action
            android:id="@+id/action_homeFragment_to_scheduleFragment"
            app:destination="@id/nav_schedule" />
        <action
            android:id="@+id/action_homeFragment_to_chartsFragment"
            app:destination="@id/nav_charts" />
    </fragment>

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.example.apptea.ui.home.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_charts"
        android:name="com.example.apptea.ui.home.ChartsFragment"
        android:label="@string/menu_charts"
        tools:layout="@layout/fragment_charts" />

    <fragment
        android:id="@+id/nav_records"
        android:name="com.example.apptea.ui.records.RecordsFragment"
        android:label="@string/menu_records"
        tools:layout="@layout/fragment_tea_records" />

    <fragment
        android:id="@+id/nav_employees_menu"
        android:name="com.example.apptea.ui.employees.EmployeesFragment"
        android:label="@string/menu_employees"
        tools:layout="@layout/fragment_employees" />

    <fragment
        android:id="@+id/nav_managers"
        android:name="com.example.apptea.ui.managers.ManagersFragment"
        android:label="@string/menu_managers"
        tools:layout="@layout/fragment_managers" />

    <fragment
        android:id="@+id/nav_companies"
        android:name="com.example.apptea.ui.companies.CompaniesFragment"
        android:label="@string/menu_companies"
        tools:layout="@layout/fragment_companies" />

    <fragment
        android:id="@+id/nav_payment_types"
        android:name="com.example.apptea.ui.payment_types.PaymentTypesFragment"
        android:label="@string/menu_payment_types"
        tools:layout="@layout/fragment_payment_types" />

</navigation>
